--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,8 +25,8 @@ body{
     border-radius: 1.25rem;
 }
 .main-card__img{
-    width: 100%;
-    height: 350px;
+    width: 21.875;
+    height: 21.875;
     border-radius: 0.938rem;
 }
 .main-card__heading{
